--- a/css/main.css
+++ b/css/main.css
@@ -963,3 +963,13 @@ li {
 }
 
 /* FORM ---------------------------------*/
+.form__main {
+  margin: 25px 0 0 20px;
+  background: linear-gradient(0.25turn, #e66465, #9198e5);
+}
+.form__body {
+  color: white;
+  padding: 45px;
+}
+
+/* ---------------------------------*/
