--- a/css/main.css
+++ b/css/main.css
@@ -227,7 +227,56 @@ h5 {
     font-size: 13px;
   }
 }
+.full-screen {
+  position: relative;
+  min-height: 65vh;
+  display: none;
+  width: 100%;
+}
+.full-screen__body {
+  padding: 50px 15px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  position: relative;
+  z-index: 2;
+  display: flex;
+  flex: 1 1 auto;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-transform: uppercase;
+}
+.full-screen__tittle {
+  text-align: center;
+  font-size: 20px;
+  letter-spacing: 15px;
+  font-weight: 700;
+  margin: 0 0 20px 0;
+}
+.full-screen__text {
+  padding-top: 170px;
+  text-align: center;
+  font-size: 18px;
+  letter-spacing: 5px;
+}
+.full-screen__video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 @media (max-width: 767.98px) {
+  .header,
+  .main__content {
+    display: none;
+  }
+  .full-screen {
+    display: flex;
+    min-height: 1vh;
+  }
   .main__informations {
     font-size: 20px;
   }
@@ -244,6 +293,7 @@ h5 {
     font-size: 14px;
   }
 }
+
 @media (max-width: 479.98px) {
   .categori__information {
     font-size: 11px;
